# TRustAss

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
doc/: dev.md  log.md  notes.md  tra.md
tra/: Cargo.toml  Makefile  build.rs
tra/protos/: controller.proto  file_sync.proto  peer.proto  replica.proto  simple_test.proto
tra/src/: banner.rs  client.rs  config.rs  conflicts.rs  debugger.rs  header.rs  machine.rs  main.rs  server.rs  timestamp.rs  tra.rs
tra/src/centra/: greeter.rs  mod.rs  port_collect.rs
tra/src/file_tree/: checker.rs  mod.rs  node.rs
tra/src/machine/: booter.rs  mod.rs  replica_server.rs  rsync.rs  service.rs
tra/src/message/: header.rs  mod.rs
tra/src/replica/: checker.rs  file_watcher.rs  meta.rs  mod.rs  node.rs  path_local.rs  query.rs  rep_meta.rs  timestamp.rs  tree.rs
tra/src/replica/file_sync/: mod.rs
tra/src/replica/file_tree/: mod.rs  node.rs
tra/src/replica/file_watcher/: mod.rs
tra/src/replica/node/: mod.rs  modification.rs  query.rs  synchronization.rs
tra/src/reptra/: booter.rs  mod.rs  peer_server.rs  rsync.rs
tra/src/rsync/: mod.rs
tra/src/tra/: mod.rs
