[package]
name = "tra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10.1"
walkdir = "2.3.3"

[features]
default = ["error"]

error = ["warn"]
warn = ["debug"]
debug = ["info"]
info = []