[package]
name = "tra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10.1"
walkdir = "2.3.3"
regex = "1.8.4"
fast_rsync = "0.2.0"
protobuf = "3.2.0"
futures = "0.3.28"
tokio = { version = "1.29.0", features = ["full"] }
tonic = "0.9.2"

[build-dependencies]
protobuf-codegen = "3.2.0"
tonic-build = "0.9.2"

[features]
default = ["error"]

error = ["warn"]
warn = ["debug"]
debug = ["info"]
info = []