[package]
name = "tra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10.2"
walkdir = "2.3.3"
regex = "1.8.4"
fast_rsync = "0.2.0"
futures = "0.3.28"
tokio = { version = "1.29.0", features = ["full"] }
tonic = "0.9.2"
prost = "0.11.9"
rand = "0.8.5"
async-recursion = "1.0.4"
lazy_static = "1.4.0"
rustyline = "12.0.0"

[build-dependencies]
tonic-build = "0.9.2"

[features]
default = ["error"]

error = ["warn"]
warn = ["debug"]
debug = ["info"]
info = []
